# nixMetaFS

./: CMakeLists.txt  README.md
src/: Common.h  main.cpp
src/abstractions/: IDisposable.h  IModel.h
src/app/: MainWindowController.cpp  MainWindowController.h
src/core/: BaseController.cpp  BaseController.h  BaseModel.h  ConfigReader.cpp  ConfigReader.h  LinqCore.h  Repository.cpp  Repository.h  Setting.h
src/dal/: MySqlRequest.cpp  MySqlRequest.h  nixDal.cpp  nixDal.h
src/miscellaneous/: nixMetaFS.xml
src/models/: AppSetting.cpp  AppSetting.h  Command.cpp  Command.h  Config.cpp  Config.h  ConnectionString.cpp  ConnectionString.h  Metadata.h
src/resources/: nix-MetaFS.gresource.xml
src/resources/ui/: nix-metafs-properties.ui
